t-koma-knowledge/tests/snapshots/codebase_embedding__hybrid_search_finds_search_pipeline.snap
---
source: t-koma-knowledge/tests/codebase_embedding.rs
expression: "build_snapshot(question, &results, 2)"
---
query: hybrid search with BM25 and embeddings
total_hits: 8
top_results:
  - rank: 1
    file: search.rs
    note_type: ReferenceFile
    snippet: "pub(crate) async fn search_store(\n    settings: &KnowledgeSettings,\n    embedder: &EmbeddingClient,\n    pool: &SqlitePoo"
  - rank: 2
    file: search.rs
    note_type: ReferenceFile
    snippet: "pub(crate) async fn dense_search(\n    embedder: &EmbeddingClient,\n    pool: &SqlitePool,\n    query: &str,\n    limit: usi"
