t-koma-knowledge/tests/snapshots/codebase_embedding__tree_sitter_code_chunking.snap
---
source: t-koma-knowledge/tests/codebase_embedding.rs
expression: "build_snapshot(question, results, 2)"
---
query: sanitize FTS5 query quoting tokens
total_hits: 8
top_results:
  - rank: 1
    file: search.rs
    note_type: ReferenceCode
    snippet: "[t-koma-knowledge source]\n\npub(crate) fn sanitize_fts5_query(raw: &str) -> String {\n    let tokens: Vec<String> = raw\n  "
  - rank: 2
    file: search.rs
    note_type: ReferenceCode
    snippet: "[t-koma-knowledge source]\n\npub(crate) async fn bm25_search(\n    pool: &SqlitePool,\n    query: &str,\n    limit: usize,\n  "
